# time-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
release/: LICENSE
src/: app.rs  db.rs  lib.rs  main.rs  ui.rs
src/lib/: app.rs  db.rs  throbber.rs  ui.rs
tests/: integration.rs
