[package]
name = "time-rs"
version = "1.0.2"
authors = ["Danny Krämer <d9r-dev@proton.me>"]
license = "MIT"
description = "A fast, lightweight, and intuitive Terminal User Interface (TUI) timer application written in Rust."
readme = "README.md"
homepage = "https://github.com/d9r-dev/time-rs"
repository = "https://github.com/d9r-dev/time-rs"
keywords = ["timer", "tui", "productivity"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
rusqlite = { version = "0.36.0", features = ["bundled"] }
chrono = "0.4.41"
crossterm = "0.29.0"
ratatui = "0.29.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.20.0"

[[test]]
name="integration"
path="tests/integration.rs"
